# MCP_Model_Context_Protocol_FastMcp_Langchain

./: .gitignore  Bfs_Dfs.py  Composio.py  Dijkastre.py  MCP.md  MCP.txt  TeamGit.py  pyproject.toml
MCP_Client/: agent.py  mcp_client.py
MCP_Server/: ExpenseTracker.py  FastAPI.py  LocalFileSystem.py
MCP_Server/templates/: index.html
